# llm-context-optimizer

./: .gitignore  .openclaude-profile.json  .pre-commit-config.yaml  BENCHMARKS.md  CHEATSHEET.md  METRICS.md  METRICS_PT.md  NC-ORPHAN-opencode.json  NC-PROMPT-FR-001-master-context.md  NC-SCR-FR-104-neocortex-launcher.bat  README.md  README_GITHUB_EN.md  README_GITHUB_PT.md  README_LEGACY_MVP.md  README_PRESENTATION_EN.md  REGIME-DE-GOVERNANÇA-ALGORÍTMICA.md  antigravity_neocortex_config.json  check_lexico.py  config.yaml  install.sh  mcp.json  pyproject.toml  pyrightconfig.json  regen_lexico.py  requirements.txt  start_mcp_server.py  turboquant_memory_prompt.md
01_neocortex_framework/: .gitignore  .neocortex_ignore  fix_shims.py  fix_trailing_whitespace.py  pyproject.toml  requirements.txt
01_neocortex_framework/.nc/: config.yaml
01_neocortex_framework/.nc_backup/: migration_report.json  neocortex_config.yaml.pre_nc_migration
01_neocortex_framework/.neocortex/: guardian_state.json  nc_diag_report.json  nc_sim_report.json  nc_sim_v2_report.json  smoke_test_report.json
01_neocortex_framework/02_memory_lobes/: NC-SES-FR-001-audit-20260420.mdc  _INDEX.md  checkpoint-post-audit-20260420.json
01_neocortex_framework/05_examples/: NC-RPT-117-core-audit.py  NC-RPT-150-coverage-gaps.md  NC-RPT-150-smoke-test-report.json  NC-RPT-154-ssot-cross-audit.json  NC-RPT-FR-154-ssot-cross-audit.json  NC-TEST-119-picoclaw-integration-fixed.py  NC-TEST-119-picoclaw-integration.py  NC-TEST-152-savepoint-wal-integration.py  NC-TEST-153-ttl-wal-prune.py  NC-TEST-154-ssot-cross-audit.py
01_neocortex_framework/21-core-central/: NC-CORE-FR-099-update-ledger.py  NC-SEC-FR-001-security-utils.py  NC-TEST-FR-002-security-integration.py  NC-TLM-FR-001-tool-manifest.json
01_neocortex_framework/23-docs/: NC-ALN-FR-001-arquitetural-alignment.md  NC-ANALYSIS-FR-001-renaming-plan-review.yaml  NC-ARC-FR-001-decision-log.md  NC-ARC-FR-002-architecture-blueprint.yaml  NC-AUD-FR-004-maturity-and-skills-deep-dive.md  NC-AUD-FR-005-deepseek-optimization-blueprint.md  NC-AUD-FR-006-quantum-hybrid-efficiency.md  NC-CAT-FR-001-research-catalog.yaml  NC-CFG-FR-001-agent-policy-template.yaml  NC-CFG-FR-002-rules-policy.yaml  NC-CFG-OP-001-operation-profiles.yaml  NC-CHG-FR-001-changelog.yaml  NC-CYC-FR-001-4-cycle-validation.md  NC-DOC-FR-002-dev-environment-standard.md  NC-DOC-LEG-001-legacy-files-documentation.md  NC-DOC-NAM-22161711-naming-fix-summary.md  NC-DOC-SUM-001-naming-convention-completion.md  NC-GOV-FR-001-nworker-protocol.md  NC-GOV-FR-002-ticket-lifecycle.yaml  NC-GOV-FR-003-ia-governance-rules.md  NC-GOV-FR-003-ia-governance-rules.yaml  NC-GOV-FR-004-fr-artifacts-registry.yaml  NC-GOV-FR-005-governance-ecosystem.yaml  NC-GOV-FR-006-agent-rights.yaml  NC-GOV-FR-008-lobe-taxonomy.yaml  NC-GRAND-PLAN-001-unified-master-plan.md  NC-LED-FR-002-lexico-dictionary.json  NC-MAP-FR-001-structural-maps.yaml  NC-MAP-FR-002-governance-hierarchy.md  NC-NAM-FR-001-config-registry.md  NC-NAM-FR-001-naming-convention.md  NC-NAM-FR-001-tools-registry.md  NC-NAM-FR-001b-lobes-registry.md.cerebral_backup  NC-POL-NAM-001-naming-convention-resolution.md  NC-SEC-FR-001-atomic-locks.md  NC-SEC-FR-001-atomic-locks.yaml  NC-SOP-FR-002-mcp-hook-activation.md  NC-SOP-FR-003-lobe-creation.md  artifact_catalog.json  coverage_report.md  (+4 more)
01_neocortex_framework/24-handoffs-internal/: NC-HOFF-FR-002-ciclo2-ciclo3-handoff.yaml  NC-HOFF-FR-002-summary.yaml
01_neocortex_framework/26-mcp-legacy/: NC-SVC-FR-102-deepseek-gateway.py
01_neocortex_framework/27-profiles/: NC-PRF-FR-002-team-schema.md  NC-PRF-FR-003-profile-loader.py  NC-PRF-FR-004-profile-manager.py
01_neocortex_framework/29-tests/: NC-TEST-FR-001-fire-test.py  NC-TEST-FR-003-config-reload.py  NC-TEST-FR-004-mcp-responsive.py  NC-TEST-FR-005-modular-server.py  NC-TEST-FR-006-sanity.py  NC-TEST-FR-007-task.py  NC-TEST-FR-008-tools.py
01_neocortex_framework/30-hooks/: NC-HK-FR-010-pre-commit-savepoint.ps1
01_neocortex_framework/30-templates/: 00-cortex-FULL.mdc  00-cortex-STARTER.mdc  NC-GOV-TPL-000-root-template.yaml  NC-GOV-TPL-001-agent-courier.yaml  NC-TPL-FR-001-template-central-index.yaml  NC-TPL-FR-002-agent-dispatch.yaml  memory-ledger-TEMPLATE.json
01_neocortex_framework/32-scripts/: NC-AUD-SSO-001-ssot-audit-system.py  NC-BOOT-FR-002-memory-hook.py  NC-HLP-VAL-001-naming-validator.py  NC-MOD-FR-001-fix_shims.py  NC-MOD-FR-002-fix_trailing_whitespace.py  NC-SCR-ACT-22160444-mcp-activation.py  NC-SCR-ANL-22160444-analysis-tool.py  NC-SCR-EXM-22160444-example-tools.py  NC-SCR-FR-001-populate-lobes-ssot.py  NC-SCR-FR-002-tool-manifest-generator.py  NC-SCR-FR-003-manifest-factory.py  NC-SCR-FR-004-governance-validator.py  NC-SCR-FR-005-auto-approve.py  NC-SCR-FR-006-ticket-validator.py  NC-SCR-FR-007-queue-monitor.py  NC-SCR-FR-008-queue-repair.py  NC-SCR-FR-009-sanitize-all-yamls.py  NC-SCR-FR-010-sync-ticket-status.py  NC-SCR-FR-011-sanitize-handoffs.py  NC-SCR-FR-012-new-tool.py  NC-SCR-FR-013-validate-file.py  NC-SCR-FR-014-end-of-cycle.ps1  NC-SCR-FR-017-visual-server.py  NC-SCR-FR-020-yaml-injector.py  NC-SCR-FR-021-lexicon-extractor.py  NC-SCR-FR-022-coverage-auditor.py  NC-SCR-FR-023-ssot-auditor.py  NC-SCR-FR-024-structural-auditor.py  NC-SCR-FR-025-lexico-validator.py  NC-SCR-FR-030-ubl-tagger.py  NC-SCR-FR-051-knowledge-graph-builder.py  NC-SCR-FR-060-courier-saneamento.py  NC-SCR-FR-061-courier-discrepancy-fix.py  NC-SCR-FR-062-engineer-encoding-fix.py  NC-SCR-FR-063-tester-vector-fix.py  NC-SCR-FR-064-artifact-catalog.py  NC-SCR-FR-065-rename-impact-analyzer.py  NC-SCR-FR-066-bootup-sync.py  NC-SCR-FR-075-genealogy-injector.py  NC-SCR-FR-080-governance-auditor.py  (+53 more)
01_neocortex_framework/90-archive-internal/: NC-CORE-FR-136-auto-amendment-engine.py  NC-PLN-FR-001-optimization-plan.mdc  NC-SES-FR-001-session-status-2026-04-10.md  NC-TODO-DS-001-roadmap-pre-mcp-archived-20260416.md
01_neocortex_framework/DIR-ARC-FR-001-archive-main/: BENCHMARKS.md  CHECKPOINT_AUDIT_2026-04-10.md  NC-DOC-FR-003-turboquant-prompt.md  NC-TKT-FR-001-tickets.md  (+1 more)
(+3938 files in other folders)
