[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neocortex"
version = "4.2.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=1.2.0",
    "httpx",
    "pyyaml",
    "ruamel.yaml",
    "anthropic",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "W", "SIM", "UP", "RUF", "N", "PLC", "PLE"]
ignore = ["E402", "N999"]
