[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neocortex-framework"
version = "4.2.0"
description = "NeoCortex Framework - A structured, extensible framework for AI-assisted development with MCP protocol integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lucas Valério", email = "lucas@example.com"},
]
maintainers = [
    {name = "NeoCortex Team", email = "team@neocortex.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "ai", "framework", "development", "tools", "neocortex"]
dependencies = [
    "mcp>=0.1.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
validation = [
    "jsonschema>=4.0.0",
]
full = [
    "mcp>=0.1.0",
    "jsonschema>=4.0.0",
    "watchdog>=3.0.0",
    "pydantic>=2.0.0",
]
infra = [
    "msgspec>=0.18.0",
    "diskcache>=5.6.0",
    "sqlite-utils>=3.35.0",
    "xapian-bindings>=1.4.0; sys_platform != 'win32'",
    "speedb>=0.1.0; platform_machine == 'x86_64' or platform_machine == 'aarch64'",
    "diskcache-rs>=0.4.0",
    "duckdb>=1.0.0",
    "redis>=4.0.0; extra == 'redis'",
    "lancedb>=0.30.0; extra == 'vectors'",
    "tantivy>=0.25.0; extra == 'search'",
]
llm = [
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/neocortex-framework/neocortex"
Documentation = "https://neocortex-framework.github.io/neocortex"
Repository = "https://github.com/neocortex-framework/neocortex.git"
Issues = "https://github.com/neocortex-framework/neocortex/issues"

[project.scripts]
neocortex = "neocortex.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neocortex*"]
exclude = ["tests*", "examples*", "white_label*"]

[tool.setuptools.package-data]
"neocortex.schemas" = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    "__pycache__",
    ".ruff_cache",
    ".venv",
    "*.pyc",
    "DIR-ARC-FR-001-archive-main",
    "05_examples",
    "tests/*",
]

[tool.ruff.lint]
# FAIL-FAST expandingido: E=pycodestyle, F=pyflakes, I=isort, B=bugbear, C4=comprehensions,
# W=warnings, SIM=simplify, UP=upgrade, RUF=ruff, T20=print, N=naming, PLC/PLE=error
select = ["E", "F", "I", "B", "C4", "W", "SIM", "UP", "RUF", "N", "PLC", "PLE"]
ignore = [
    "E501",   # linha longa — controlado por line-length
    "B008",   # function call in default arg — padrão nos tools MCP
    "E402",   # module-level import not at top — importlib.util patterns
    "SIM108", # ternary em vez de if-else — preferencia estilistica
    "SIM105", # contextlib.suppress em vez de try/except pass
    "PLC0415",# import dentro de funcao — padrão importlib
    "RUF012", # mutable classvar annotation
    "N999",   # nome de modulo invalido — NC-SUPER-* pattern
    "N801", "N802", "N803", "N806", "N815", # snake_case DTO
    "UP006", "UP007", "UP035", # type annotation futures — py38 compat
    "E701",   # multiple statements on one line — if x: do_y pattern
    "E702",   # semicolons — importlib spec;loader pattern
    "E741",   # ambiguous variable l — loop variable in codebase
    "E722",   # bare except — legacy, to be fixed in refactor
    "RUF013", # implicit Optional — py38 compat, low risk
    "SIM",    # simplify suggestions — pre-existing patterns
    "PLC",    # pylint conventions — pre-existing patterns
    "F821",   # undefined name in closure scope — ruff doesn't trace outer function vars
    "N814",   # CamelCase in import alias
    "B904",   # raise from err — legacy patterns
    "RUF002", # ambiguous unicode in docstrings — legacy
    "F404",   # from __future__ after docstring — 3W injection on legacy files
    "B007",   # unused loop variable — common pattern in dict iteration
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "N"]
"scripts/*.py" = ["T201", "SIM", "N", "PLC"]
"05_examples/*.py" = ["F401", "E", "SIM", "N"]
# Tools com muitos erros: permissão gradual
"neocortex/mcp/tools/NC-SUPER-00*.py" = ["N", "SIM", "PLC"]
# Legacy: brain + health + notification (serão refatorados)
"neocortex/mcp/tools/NC-SUPER-007-brain.py" = ["N", "SIM"]
"neocortex/mcp/tools/NC-SUPER-013-health.py" = ["N", "SIM"]
"neocortex/mcp/tools/NC-SUPER-011-notification.py" = ["N", "SIM"]

[tool.ruff.format]
# FAIL-FAST: formatação automática no check
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["neocortex"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
follow_imports = "skip"
disable_error_code = ["arg-type", "union-attr", "name-defined", "var-annotated", "assignment", "index", "attr-defined", "operator", "has-type", "used-before-def", "return", "return-value", "call-overload", "override", "dict-item"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "off"
reportMissingImports = false
reportOptionalMemberAccess = false
exclude = ["**/DIR-ARC-FR-001-archive-main/**", "**/05_examples/**", "**/tests/**"]
include = [
    "neocortex/core/NC-CORE-FR-129-shared-kernel-gateway.py",
    "neocortex/core/NC-CORE-FR-139-orbital-bridge.py",
    "neocortex/core/NC-CORE-FR-142-pulse-scheduler-orbital.py",
    "neocortex/core/NC-CORE-FR-146-central-watcher.py",
    "neocortex/core/NC-CORE-FR-147-root-cause-engine.py",
    "neocortex/core/NC-CORE-FR-148-submission-pipeline.py",
    "neocortex/core/NC-CORE-FR-149-full-system-audit.py",
    "neocortex/mcp/tools/NC-SUPER-001-governance.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=neocortex --cov-report=term-missing"